jwt,salt,register api added
